--- a/src/components/molecules/carouselSlide/styles/carousel-slide.css
+++ b/src/components/molecules/carouselSlide/styles/carousel-slide.css
@@ -25,7 +25,7 @@
   margin: 0;
   text-align: center;
   max-width: 70vw;
-  font-family: 'Subway Berlin', sans-serif;
+  font-family: "Subway Berlin", sans-serif;
 }
 
 .carousel-slide-image-wrapper {
