--- a/src/components/molecules/tacticCardBack/styles/tactic-card-back.css
+++ b/src/components/molecules/tacticCardBack/styles/tactic-card-back.css
@@ -7,6 +7,8 @@
   justify-content: center;
   border-radius: 12px;
   overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
 .tactic-card-image-back {
@@ -33,6 +35,10 @@
   border-radius: 6px;
   max-width: 90%;
   text-wrap: balance;
+  -webkit-text-stroke: 1px;
+  -webkit-text-fill-color: white;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 .truth {
     color: white !important;
