--- a/src/components/organisms/mainTable/styles/main-table.css
+++ b/src/components/organisms/mainTable/styles/main-table.css
@@ -9,6 +9,9 @@
   padding-inline: clamp(8px, 2vw, 16px);
   overflow: auto;
 
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+
   .main-table__influencer {
     width: 100%;
     height: 100%;
