created rotating scoring for name/score on scoreboard

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 @import "./components/atoms/input/styles/input.css";
 @import "./components/atoms/roomTab/styles/room-tab.css";
 @import "./components/atoms/rotateScreen/styles/rotate-screen.css";
+@import "./components/atoms/rotatingScore/styles/rotating-score.css";
 @import "./components/molecules/carouselSlide/styles/carousel-slide.css";
 @import "./components/molecules/header/styles/header.css";
 @import "./components/molecules/newsCard/styles/news-card.css";
@@ -82,7 +83,3 @@
   box-sizing: border-box;
   position: relative;
 }
-
-/* Adding -webkit-text-fill-color, -webkit-font-smoothing, and text-rendering properties */
--webkit-font-smoothing: antialiased;
-text-rendering: optimizeLegibility;
