--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 @import "./components/atoms/roomTab/styles/room-tab.css";
 @import "./components/atoms/rotateScreen/styles/rotate-screen.css";
 @import "./components/atoms/rotatingScore/styles/rotating-score.css";
+@import "./components/molecules/bottomNav/styles/bottom-nav.css";
 @import "./components/molecules/carouselSlide/styles/carousel-slide.css";
 @import "./components/molecules/header/styles/header.css";
 @import "./components/molecules/newsCard/styles/news-card.css";
@@ -82,4 +83,5 @@
   overflow: hidden;
   box-sizing: border-box;
   position: relative;
+  color: white;
 }
