forgot to save 2 files

--- a/src/components/organisms/modals/responseModal/styles/response-modal.css
+++ b/src/components/organisms/modals/responseModal/styles/response-modal.css
@@ -38,6 +38,7 @@
   margin-top: -40px;
   text-align: center;
   -webkit-text-stroke: 15px black;
+  -webkit-text-fill-color: white;
   paint-order: stroke fill;
   color: white;
 }
