--- a/src/components/atoms/button/styles/button.css
+++ b/src/components/atoms/button/styles/button.css
@@ -2,8 +2,8 @@
   background: none;
   border: none;
   border-radius: 12px;
-  padding: var(--spacing-sm) var(--spacing-md);
-  margin-top: var(--spacing-md);
+  /* padding: var(--spacing-sm) var(--spacing-md);
+  margin-top: var(--spacing-md); */
   cursor: pointer;
   z-index: 2;
   display: flex;
